--- a/formacao.html
+++ b/formacao.html
@@ -34,7 +34,7 @@
                 <h4>Gestão da Tecnologia da Informação</h4>
                 <p><strong>Instituição:</strong> Instituto Infnet</p>
                 <p><strong>Período:</strong> 2022 - 2018</p>
-                <p><strong>Principais disciplinas:</strong> Programação, Estruturas de Dados, Banco de Dados, Engenharia de Software, Redes de Computadores</p>
+                <p><strong>Principais disciplinas:</strong> Computação Em Nuvem, Gestão De Serviços De Ti, Banco De Dados, Engenharia De Software</p>
             </div>
             
             <h2>Cursos e Certificações</h2>
