--- a/formacao.html
+++ b/formacao.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
+    <header> <!-- Cabeçalho da página -->
         <h1>Formação</h1>
         <nav>
             <a href="index.html" class="button">Início</a>
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <main>
-        <section id="formacao">
+        <section id="formacao"> <!-- Seção de formação -->
             <h2>Formação Educacional</h2>
 
                 <div class="formacao-item">
