--- a/index.html
+++ b/index.html
@@ -2,31 +2,29 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Meta tag para responsividade -->
     <title>Portfólio</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css"> <!-- Link para o arquivo CSS -->
 </head>
 <body>
-    <header>
+    <header> <!-- Cabeçalho da página -->
         <h1>Bem-vindo ao Portfólio <br> Alexandre Garcia Barbeito Ferreira</h1>
         <nav>
-            <a href="index.html" class="button active">Início</a>
-            <a href="sobre.html" class="button">Sobre Mim</a>
-            <a href="formacao.html" class="button">Formação</a>
-            <a href="portfolio.html" class="button">Portfólio</a>
-            <a href="contato.html" class="button">Contato</a>
+            <a href="index.html" class="button active">Início</a> <!-- Link para a página inicial -->   
+            <a href="sobre.html" class="button">Sobre Mim</a> <!-- Link para a página sobre mim -->
+            <a href="formacao.html" class="button">Formação</a> <!-- Link para a página de formação -->
+            <a href="portfolio.html" class="button">Portfólio</a> <!-- Link para a página de portfólio -->
+            <a href="contato.html" class="button">Contato</a> <!-- Link para a página de contato -->
         </nav>
     </header>
     <main>
-        <section id="home">
+        <section id="home"> <!-- Seção principal da página inicial -->
             <h2>Página Inicial</h2>
             <p>Este é o meu Portfólio, onde você pode encontrar informações sobre mim, minha formação, meus projetos e como entrar em contato.</p>
         </section>
     </main>
-    <footer>
+    <footer> <!-- Rodapé da página -->
         <p>&copy; 2025 Meu Portfólio</p>
     </footer>
 </body>
 </html>
-
-
