--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
+    <header> <!-- Cabeçalho da página -->
         <h1>Portfólio</h1>
         <nav>
             <a href="index.html" class="button">Início</a>
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <main>
-        <section id="portfolio">
+        <section id="portfolio"> <!-- Seção do portfólio -->
             <h2>Meus Projetos</h2>
             
             <div class="projeto-item">
