--- a/sobre.html
+++ b/sobre.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
+    <header> <!-- Cabeçalho da página -->
         <h1>Sobre Mim</h1>
         <nav>
             <a href="index.html" class="button">Início</a>
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <main>
-        <section id="sobre">
+        <section id="sobre"> <!-- Seção sobre mim -->
             <h2>Quem Sou Eu</h2>
             <p>Olá! Meu nome é Alexandre Garcia Barbeito Ferreira e sou apaixonado por tecnologia e desenvolvimento web. Tenho 51 anos e estou cursando Engenharia de Computação.</p>
             
@@ -39,8 +39,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 Meu Portfólio Pessoal</p>
+        <p>&copy; 2025 Meu Portfólio Pessoal</p> 
     </footer>
 </body>
 </html>
-
